@@ -3,6 +3,8 @@ Changes after KOffice-1.3-beta3
 KOfficeCore:
 - Fixed saving of the window size when closing
 KoText:
+- Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
+and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
 - Fixed painting of non-breakable-spaces (could show up as a visible square)
 - Implemented painting of non-breakable-spaces when "draw formatting characters" is on
 - Fixed crash (e.g. happening with 'section title' variable, #61735)
